--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -5,5 +5,5 @@
   <%= @comment.content %>
 </p>
 
-<%= link_to 'Edit', edit_comment_path(@comment) %> |
-<%= link_to 'Back', comments_path %>
+<%= link_to 'Back', [@commentable, :comments] %>
+<%= link_to 'Delete', [@commentable, @comment], method: :delete %>
