--- a/app/views/speakers/show.html.erb
+++ b/app/views/speakers/show.html.erb
@@ -35,5 +35,5 @@
   <%= @speaker.weight %>
 </p>
 
-<%= link_to 'Edit', edit_speaker_path(@speaker) %> |
-<%= link_to 'Back', speakers_path %>
+<%= link_to 'Show Comments', [@speaker, :comments] %> |
+<%= link_to 'New Comment', [:new, @speaker, :comment] %> |
