--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -14,9 +14,9 @@
     <% @comments.each do |comment| %>
       <tr>
         <td><%= comment.content %></td>
-        <td><%= link_to 'Show', comment %></td>
-        <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
-        <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show Comments', [@commentable, :comments] %></td>
+        <td><%= link_to 'Edit', [:edit, @commentable, @comment] %></td>
+        <td><%= link_to 'Delete', [@commentable, @comment], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Comment', new_comment_path %>
+<%= link_to 'New Comment', [:new, @commentable, :comment] %>
